# COMP3003-Project

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Makefile  README.md  client.c  server.c
libs/: Makefile
res/: #gui.glade#  gui.glade
src/: Makefile  client.c  client.h  data.c  data.h  gui.c  gui.h  http.c  http.h  json.c  json.h  login.c  login.h  main.c  server.c  server.h
tests/: Makefile
tests/gui/: Makefile  gui.c
